Fix spacing/font issue (for real hopefully).
Refactor Entry component backend to please fix aaaaaaaa.

--- a/src/components/Entry.scss
+++ b/src/components/Entry.scss
@@ -1,5 +1,11 @@
 .entry {
     padding: 2%;
+    width: 40%;
+}
+@media (max-width: 50rem) {
+    .entry {
+        width: 90%;
+    }
 }
 
 .entry-title {
@@ -15,5 +21,6 @@
 }
 
 .entry-link {
-    margin: 10px;
+    padding: 10px;
+    flex-basis: 20%;
 }
