--- a/src/index.scss
+++ b/src/index.scss
@@ -13,7 +13,7 @@ body {
 
     text-align: center;
     font-family: "Lato", sans-serif;
-    font-size: 18px;
+    font-size: 1.2rem;
 }
 
 a {
@@ -24,13 +24,12 @@ a {
 
 .flex {
     display: flex;
-    flex-wrap: row wrap;
+    flex-flow: row wrap;
     justify-content: center;
 }
 .flex-element {
-    flex-basis: 40%;
+    margin: 1%;
     flex-grow: 1;
-    margin: 1.5%;
 }
 
 
@@ -44,25 +43,38 @@ a {
 
 
 h1 {
-    font-size: 75px;
+    font-size: 4.8rem;
 }
 h2 {
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: normal;
 }
 h3 {
-    font-size: 40px;
+    font-size: 2.4rem;
     font-weight: normal;
 }
-
 @media (max-width: 600px) {
     h2 {
-        font-size: 20px;
+        font-size: 1.3rem;
     }
     h3 {
-        font-size: 32px;
+        font-size: 2rem;
     }
     body {
-        font-size: 16px;
+        font-size: 1.1rem;
+    }
+}
+@media (max-width: 450px) {
+    h1 {
+        font-size: 4rem;
+    }
+    h2 {
+        font-size: 1.1rem;
+    }
+    h3 {
+        font-size: 1.7rem;
+    }
+    body {
+        font-size: 1rem;
     }
 }
